--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
+import About from "../components/About.astro";
 import Header from "../components/Header.astro";
 import Up from "../components/Up.astro";
+import Product from "../components/Product.astro"
 ---
 
 <html lang="ru">
@@ -14,5 +16,7 @@ import Up from "../components/Up.astro";
   <Header />
   <slot />
   <Up />
+  <About />
+  <Product />
 </body>
 </html>
