--- a/src/components/Product.astro
+++ b/src/components/Product.astro
@@ -20,3 +20,16 @@
          <div></div>
      </div>
   </section>
+
+  <!-- Выпадающее меню -->
+  <!-- <div class="text-base lg:text-xl font-gilroy absolute invisible group-hover:visible opacity-0 group-hover:opacity-100 bg-[#2C2C2C] bg-opacity-60 text-white p-4 rounded-lg mt-4 w-64 lg:w-72 left-1/2 transform -translate-x-1/2 transition-all duration-300 ease-in-out scale-95 group-hover:scale-100">
+   <div class="flex justify-center items-center mb-4">
+     <img src="/logo.svg" alt="Логотип" class="h-8">
+     <span class="ml-2 font-bold">ООО «ДМДК»</span>
+   </div>
+   <div class="space-y-2 text-center">
+     <p>+7 (925) 104-50-50</p>
+     <p>+7 (926) 664-62-46</p>
+     <p>ooo.dmdk@mail.ru</p>
+     <p>Режим работы:<br> <span class="text-lg">9:00 - 21:00</span></p>
+   </div> -->
