--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,4 @@
-<section class="relative flex items-center justify-start h-screen bg-cover bg-center" style="background-image: url('/hero.webp');">
+<section class="relative flex items-center justify-start h-screen bg-cover bg-center" style="background-image: url('/images/hero.webp');">
   <div class="absolute inset-0 bg-black opacity-30"></div> <!-- Затемнение фона -->
   <div class="relative text-left z-10 p-4 lg:p-8">
     <h1 class="text-[60px] lg:text-[150px] font-bold text-white font-nevduplenysh tracking-wider leading-none">
