--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,18 +1,20 @@
 ---
 import Header from "../components/Header.astro";
 import Up from "../components/Up.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ООО «ДМДК»</title>
-  <link rel="stylesheet" href="/styles/global.css">
-</head>
-<body>
-  <Header />
-  <slot />
-  <Up />
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ООО «ДМДК»</title>
+    <link rel="stylesheet" href="/styles/global.css" />
+  </head>
+  <body>
+    <Header />
+    <slot />
+    <Up />
+    <Footer />
+  </body>
 </html>
