--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -39,14 +39,14 @@
             <p>Режим работы:<br /> <span class="text-lg">9:00 - 21:00</span></p>
           </div>
           <div class="flex justify-center space-x-4 mt-4">
-            <a href="#" class="social-icon">
+            <a href="https://t.me/OOO_DMDK" class="social-icon">
               <img
                 src="/icons/tg.svg"
                 alt="Telegram"
                 class="w-8 h-8 lg:w-10 lg:h-10"
               />
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://wa.me/79251045050" class="social-icon">
               <img
                 src="/icons/ws.svg"
                 alt="WhatsApp"
@@ -107,14 +107,14 @@
         <p>Режим работы:<br /> <span class="text-lg">9:00 - 21:00</span></p>
       </div>
       <div class="flex justify-center space-x-4 mt-4">
-        <a href="#" class="social-icon">
+        <a href="https://t.me/OOO_DMDK" class="social-icon">
           <img
             src="/icons/tg.svg"
             alt="Telegram"
             class="w-8 h-8 lg:w-10 lg:h-10"
           />
         </a>
-        <a href="#" class="social-icon">
+        <a href="https://wa.me/79251045050" class="social-icon">
           <img
             src="/icons/ws.svg"
             alt="WhatsApp"
