--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -138,8 +138,8 @@
 
     const message = `Новая заявка:\n\nИмя: ${name}\nТелефон: ${phone}\nКомментарий: ${comment}`;
 
-    const token = "YOUR_BOT_TOKEN"; // Замените на токен вашего бота
-    const chatId = "YOUR_CHAT_ID"; // Замените на ID вашей группы или чата
+    const token = "7413445274:AAGFPUJZypcq5fG6r-Eq6pu81RHf6GOW2oU";
+    const chatId = "-1002176656869";
     const url = `https://api.telegram.org/bot${token}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(
       message,
     )}`;
