--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,9 +11,9 @@
       </div>
       <p class="text-xl mb-6">Режим работы:<br />9:00 - 21:00</p>
       <nav class="space-y-2 text-lg">
-        <a href="#" class="block hover:text-gray-200">о нас</a>
-        <a href="#" class="block hover:text-gray-200">контакты</a>
-        <a href="#" class="block hover:text-gray-200">продукция</a>
+        <a href="/#about" class="block hover:text-gray-200">о нас</a>
+        <a href="/#products" class="block hover:text-gray-200">продукция</a>
+        <a href="/#contacts" class="block hover:text-gray-200">контакты</a>
       </nav>
     </div>
 
@@ -44,13 +44,13 @@
 
       <div class="flex space-x-4 mt-4">
         <a
-          href="#"
+          href="https://wa.me/79251045050"
           class="bg-white p-4 rounded-lg text-[#F5CA2F] flex items-center justify-center w-14 h-14"
         >
           <img src="/icons/ws.svg" alt="WhatsApp" class="h-8 w-8" />
         </a>
         <a
-          href="#"
+          href="https://t.me/OOO_DMDK"
           class="bg-white p-4 rounded-lg text-[#F5CA2F] flex items-center justify-center w-14 h-14"
         >
           <img src="/icons/tg.svg" alt="Telegram" class="h-8 w-8" />
