--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,105 @@
+<section
+  class="relative flex items-center justify-start h-screen bg-cover bg-center"
+  style="background-image: url('/images/hero.webp');"
+>
+  <div class="absolute inset-0 bg-black opacity-30"></div>
+  <div class="relative text-left z-10 p-4 lg:p-8">
+    <h1
+      class="text-[60px] lg:text-[150px] font-bold text-white font-nevduplenysh tracking-wider leading-none"
+    >
+      Блеск и надежность <br /> в каждом грамме
+    </h1>
+    <p class="mt-4 lg:mt-8">
+      <button
+        class="open-modal inline-block px-8 py-4 lg:px-16 lg:py-8 text-lg lg:text-3xl font-semibold bg-gradient-to-r from-yellow-500 via-yellow-600 to-yellow-700 text-white rounded-lg shadow-lg shadow-yellow-500/50 hover:shadow-xl hover:shadow-yellow-400/70 hover:bg-opacity-90 transition-all duration-300"
+      >
+        Оставить заявку
+      </button>
+    </p>
+  </div>
+  <div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 text-white">
+    <div class="flex flex-col items-center">
+      <div class="text-xs mb-2">Листай ниже</div>
+      <svg
+        class="w-8 h-8 animate-bounce"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M19 9l-7 7-7-7"></path>
+      </svg>
+    </div>
+  </div>
+</section>
+
+<!-- Модальное окно -->
+<div
+  id="modal"
+  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden"
+>
+  <div
+    class="bg-gray-100 rounded-xl p-8 max-w-md w-full mx-4 lg:mx-auto relative"
+  >
+    <button
+      id="closeModal"
+      class="absolute top-4 right-4 text-gray-600 hover:text-gray-900"
+    >
+      <svg
+        class="w-6 h-6"
+        fill="none"
+        stroke="currentColor"
+        viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M6 18L18 6M6 6l12 12"></path>
+      </svg>
+    </button>
+
+    <h2 class="text-3xl font-semibold mb-4 text-center">Обсудить заказ</h2>
+    <p class="text-center text-gray-700 mb-6">
+      Оставьте ваши контактные данные. Наши менеджеры отправят вам актуальную
+      информацию о ценах и наличии продукции на складе.
+    </p>
+    <form id="contactForm">
+      <input
+        type="text"
+        id="name"
+        placeholder="Ваше имя"
+        class="w-full mb-4 p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-500"
+        required
+      />
+      <input
+        type="tel"
+        id="phone"
+        placeholder="Телефон"
+        class="w-full mb-4 p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-500"
+        required
+      />
+      <textarea
+        id="comment"
+        placeholder="Комментарий"
+        class="w-full mb-4 p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-500"
+        rows="4"
+        required></textarea>
+      <button
+        type="submit"
+        class="w-full py-3 bg-yellow-500 text-white rounded-lg font-semibold hover:bg-yellow-600 transition"
+      >
+        Отправить
+      </button>
+    </form>
+  </div>
+</div>
+
 <header
   class="fixed text-white top-2 left-1/2 transform -translate-x-1/2 w-11/12 max-w-screen-lg z-50 flex justify-between items-center p-2 lg:p-4 bg-[#2C2C2C] bg-opacity-60 rounded-full"
 >
@@ -7,10 +109,10 @@
       <span class="ml-2 font-bold text-lg sm:text-xl lg:text-4xl font-gilroy"
         >ООО «ДМДК»</span
       >
-    </div></a
-  >
+    </div>
+  </a>
 
-  <nav class="hidden lg:flex">
+  <nav class="hidden lg:flex items-center space-x-4">
     <ul class="flex text-base lg:text-3xl space-x-4 lg:space-x-8">
       <li>
         <a href="/#about" class="hover:text-yellow-400 font-gilroy">О НАС</a>
@@ -24,7 +126,6 @@
         <a href="/#contacts" class="hover:text-yellow-400 font-gilroy"
           >КОНТАКТЫ</a
         >
-        <!-- Выпадающее меню -->
         <div
           class="text-base lg:text-xl font-gilroy absolute invisible group-hover:visible opacity-0 group-hover:opacity-100 bg-[#2C2C2C] bg-opacity-60 text-white p-4 rounded-lg mt-4 w-64 lg:w-72 left-1/2 transform -translate-x-1/2 transition-all duration-300 ease-in-out scale-95 group-hover:scale-100"
         >
@@ -57,9 +158,15 @@
         </div>
       </li>
     </ul>
+
+    <!-- Кнопка "Оставить заявку" -->
+    <button
+      class="open-modal ml-4 inline-block px-4 py-2 lg:px-6 lg:py-3 text-base lg:text-lg font-semibold bg-gradient-to-r from-yellow-500 via-yellow-600 to-yellow-700 text-white rounded-lg shadow-lg shadow-yellow-500/50 hover:shadow-xl hover:shadow-yellow-400/70 hover:bg-opacity-90 transition-all duration-300"
+    >
+      Оставить заявку
+    </button>
   </nav>
 
-  <!-- Мобильное меню (гамбургер) -->
   <div class="lg:hidden">
     <button id="menu-toggle" class="focus:outline-none">
       <svg
@@ -79,59 +186,90 @@
   </div>
 </header>
 
-<!-- Мобильное меню -->
 <div
   id="mobile-menu"
-  class="hidden fixed inset-x-0 top-16 p-4 bg-[#2C2C2C] bg-opacity-60 text-white flex flex-col items-center space-y-4 transform transition-transform duration-300 ease-in-out z-40"
+  class="hidden fixed inset-x-0 -top-32 p-4 bg-[#2C2C2C] bg-opacity-60 text-white flex flex-col items-center space-y-4 transform transition-transform duration-300 ease-in-out z-40"
 >
   <a href="/#about" class="text-lg font-gilroy hover:text-yellow-400">О НАС</a>
   <a href="/#products" class="text-lg font-gilroy hover:text-yellow-400"
     >ПРОДУКЦИЯ</a
   >
-  <div class="relative group">
-    <a href="/#contacts" class="text-lg font-gilroy hover:text-yellow-400"
-      >КОНТАКТЫ</a
-    >
-    <!-- Выпадающее меню в мобильном меню -->
-    <div
-      class="text-lg font-gilroy absolute invisible group-hover:visible opacity-0 group-hover:opacity-100 bg-[#2C2C2C] bg-opacity-80 text-white p-4 rounded-lg mt-4 w-64 left-1/2 transform -translate-x-1/2 transition-all duration-300 ease-in-out scale-95 group-hover:scale-100"
-    >
-      <div class="flex items-center mb-4 justify-center">
-        <img src="/logo.svg" alt="Логотип" class="h-8" />
-        <span class="ml-2 font-bold">ООО «ДМДК»</span>
-      </div>
-      <div class="space-y-2 text-center">
-        <p>+7 (925) 104-50-50</p>
-        <p>+7 (926) 664-62-46</p>
-        <p>ooo.dmdk@mail.ru</p>
-        <p>Режим работы:<br /> <span class="text-lg">9:00 - 21:00</span></p>
-      </div>
-      <div class="flex justify-center space-x-4 mt-4">
-        <a href="https://t.me/OOO_DMDK" class="social-icon">
-          <img
-            src="/icons/tg.svg"
-            alt="Telegram"
-            class="w-8 h-8 lg:w-10 lg:h-10"
-          />
-        </a>
-        <a href="https://wa.me/79251045050" class="social-icon">
-          <img
-            src="/icons/ws.svg"
-            alt="WhatsApp"
-            class="w-8 h-8 lg:w-10 lg:h-10"
-          />
-        </a>
-      </div>
-    </div>
-  </div>
+  <a href="/#contacts" class="text-lg font-gilroy hover:text-yellow-400"
+    >КОНТАКТЫ</a
+  >
+  <!-- Кнопка "Оставить заявку" в мобильном меню -->
+  <button
+    class="open-modal mt-4 w-full py-2 text-lg font-semibold bg-gradient-to-r from-yellow-500 via-yellow-600 to-yellow-700 text-white rounded-lg shadow-lg shadow-yellow-500/50 hover:shadow-xl hover:shadow-yellow-400/70 hover:bg-opacity-90 transition-all duration-300"
+  >
+    Оставить заявку
+  </button>
 </div>
 
 <script>
+  // Получение всех кнопок с классом "open-modal"
+  const openModalButtons = document.querySelectorAll(".open-modal");
+  const closeModalBtn = document.getElementById("closeModal");
+  const modal = document.getElementById("modal");
+  const contactForm = document.getElementById("contactForm");
+
+  // Привязка события открытия модального окна ко всем кнопкам
+  openModalButtons.forEach((button) => {
+    button.addEventListener("click", () => {
+      modal.classList.remove("hidden");
+    });
+  });
+
+  // Закрытие модального окна при клике на крестик
+  closeModalBtn.addEventListener("click", () => {
+    modal.classList.add("hidden");
+  });
+
+  // Закрытие модального окна при клике на фон
+  modal.addEventListener("click", (e) => {
+    if (e.target === modal) {
+      modal.classList.add("hidden");
+    }
+  });
+
+  // Отправка данных в Telegram
+  contactForm.addEventListener("submit", function (e) {
+    e.preventDefault();
+
+    const name = document.getElementById("name").value;
+    const phone = document.getElementById("phone").value;
+    const comment = document.getElementById("comment").value;
+
+    const message = `Новая заявка:\n\nИмя: ${name}\nТелефон: ${phone}\nКомментарий: ${comment}`;
+
+    const token = "7413445274:AAGFPUJZypcq5fG6r-Eq6pu81RHf6GOW2oU";
+    const chatId = "-1002176656869";
+    const url = `https://api.telegram.org/bot${token}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(
+      message,
+    )}`;
+
+    fetch(url)
+      .then((response) => {
+        if (response.ok) {
+          alert("Заявка успешно отправлена!");
+          contactForm.reset();
+          modal.classList.add("hidden");
+        } else {
+          alert("Ошибка при отправке заявки. Попробуйте позже.");
+        }
+      })
+      .catch((error) => {
+        console.error("Error:", error);
+        alert("Ошибка при отправке заявки. Попробуйте позже.");
+      });
+  });
+
+  // Функционал мобильного меню
   const menuToggle = document.getElementById("menu-toggle");
   const mobileMenu = document.getElementById("mobile-menu");
 
   menuToggle.addEventListener("click", () => {
     mobileMenu.classList.toggle("hidden");
-    mobileMenu.classList.toggle("block");
+    mobileMenu.classList.toggle("transform");
+    mobileMenu.classList.toggle("translate-y-full");
   });
 </script>
